// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton renders correctly 1`] = `
<DocumentFragment>
  <a
    class="auth0-lock-social-button auth0-lock-social-big-button"
    data-provider="strategy"
    type="button"
  >
    <div
      class="auth0-lock-social-button-icon"
    />
    <div
      class="auth0-lock-social-button-text"
    >
      label
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthButton renders with style customizations 1`] = `
<DocumentFragment>
  <a
    class="auth0-lock-social-button auth0-lock-social-big-button"
    data-provider="strategy"
    type="button"
  >
    <div
      class="auth0-lock-social-button-icon"
      style="background-image: url("test");"
    />
    <div
      class="auth0-lock-social-button-text"
    >
      label
    </div>
  </a>
</DocumentFragment>
`;
